# Doctoraizer

./: .env  .gitignore  Covid_19.csv  LICENSE  README.md  data_base.py  data_cleaning.ipynb  encryption.py  full_version.csv  gui.py  last_mod.csv  main.py  paitent_database.db  prep1.md  pyproject.toml  requirements.md  resources.md
.ipynb_checkpoints/: data_cleaning-checkpoint.ipynb  full_version-checkpoint.csv  last_mod-checkpoint.csv
Notebooks/: data_cleaning2.ipynb  data_cleaninig1.ipynb  is_chest.ipynb
assets/omar_test/: modeltest.ipynb
notebooks/: Inception_V3_model.ipynb  covid-simplecnn.ipynb  data_cleanin1.ipynb  images.ipynb
