[tool.poetry]
name = "doctoraizer"
version = "0.1.0"
description = ""
authors = ["Noura-Alquran <nmalquran15@eng.just.edu.jo>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.16"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
keras = "^2.4.3"
seaborn = "^0.11.1"
imageio = "^2.9.0"
tqdm = "^4.61.0"
sklearn = "^0.0"
pycrypto = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
